//
//  TestingIdentifiers.swift
//  CombineDemo
//
//  Created by Daniel No on 7/21/21.
//

import Foundation

public enum TestingIdentifiers{
    
    public enum ReactiveViewController : String{
        case passTextfield
        case userTextField
        case submitBtn
    }
    
    
    
}
